# quiz-game

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  env.template  manage.py  pyproject.toml  schema.yml  setup.cfg
src/: decorators.py  kafka.py
src/consumer/pg_update_score/: events_engine.py  handle_event.py
src/consumer/redis_update_score/: events_engine.py
src/core/: models.py
src/media_service/: asgi.py  celery_settings.py  kafka_settings.py  service_settings.py  settings.py  urls.py  wsgi.py
src/utils/: handler.py  http.py
